// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "samsung-store",
      "name": "Samsung",
      "products": [
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung TV",
          "upc": "tv",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Fold",
          "upc": "fold",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
      ],
    },
  },
  "explain": [
    {
      "data": {
        "storefront": {
          "id": "samsung-store",
          "name": "Samsung",
          "products": [
            {
              "upc": "tv",
            },
            {
              "upc": "fold",
            },
            {
              "upc": "galaxy",
            },
          ],
        },
      },
      "includes": [
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "samsung",
                "products": [
                  {
                    "name": "Samsung TV",
                    "upc": "tv",
                  },
                  {
                    "name": "Samsung Fold",
                    "upc": "fold",
                  },
                  {
                    "name": "Samsung Galaxy",
                    "upc": "galaxy",
                  },
                ],
              },
              "name": "Samsung TV",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "Samsung",
                },
              },
              "includes": [],
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathInData": [
                "storefront",
                "products",
                0,
                "manufacturer",
              ],
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "Manufacturer",
              "variables": {
                "Manufacturer_id": "samsung",
              },
            },
          ],
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathInData": [
            "storefront",
            "products",
            0,
          ],
          "pathToExportData": [
            "product",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": "tv",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "samsung",
                "products": [
                  {
                    "name": "Samsung TV",
                    "upc": "tv",
                  },
                  {
                    "name": "Samsung Fold",
                    "upc": "fold",
                  },
                  {
                    "name": "Samsung Galaxy",
                    "upc": "galaxy",
                  },
                ],
              },
              "name": "Samsung Fold",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "Samsung",
                },
              },
              "includes": [],
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathInData": [
                "storefront",
                "products",
                1,
                "manufacturer",
              ],
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "Manufacturer",
              "variables": {
                "Manufacturer_id": "samsung",
              },
            },
          ],
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathInData": [
            "storefront",
            "products",
            1,
          ],
          "pathToExportData": [
            "product",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": "fold",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "samsung",
                "products": [
                  {
                    "name": "Samsung TV",
                    "upc": "tv",
                  },
                  {
                    "name": "Samsung Fold",
                    "upc": "fold",
                  },
                  {
                    "name": "Samsung Galaxy",
                    "upc": "galaxy",
                  },
                ],
              },
              "name": "Samsung Galaxy",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "Samsung",
                },
              },
              "includes": [],
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathInData": [
                "storefront",
                "products",
                2,
                "manufacturer",
              ],
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "Manufacturer",
              "variables": {
                "Manufacturer_id": "samsung",
              },
            },
          ],
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathInData": [
            "storefront",
            "products",
            2,
          ],
          "pathToExportData": [
            "product",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": "galaxy",
          },
        },
      ],
      "inlineVariables": {
        "id": "samsung-store",
      },
      "kind": "composite",
      "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
      "pathInData": [
        "storefront",
      ],
      "pathToExportData": [
        "storefront",
      ],
      "private": [],
      "public": [
        "id",
        "name",
        "products.upc",
      ],
      "source": "storefronts",
      "type": "Storefront",
      "typeOrField": "storefront",
      "variables": {
        "id": "samsung-store",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "fields": [
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "id",
              "type": "ID",
            },
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "name",
              "type": "String",
            },
            {
              "fields": [
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "upc",
                  "type": "ID",
                },
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "name",
                  "type": "String",
                },
                {
                  "fields": [
                    {
                      "fields": [
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "upc",
                          "type": "ID",
                        },
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "name",
                          "type": "String",
                        },
                      ],
                      "inlineVariables": {},
                      "isList": true,
                      "isListItemNonNull": false,
                      "isNonNull": true,
                      "kind": "composite",
                      "name": "products",
                      "type": "Product",
                    },
                    {
                      "inlineVariables": {},
                      "isNonNull": true,
                      "kind": "scalar",
                      "name": "name",
                      "type": "String",
                    },
                  ],
                  "inlineVariables": {},
                  "isList": false,
                  "isListItemNonNull": false,
                  "isNonNull": false,
                  "kind": "composite",
                  "name": "manufacturer",
                  "type": "Manufacturer",
                },
              ],
              "inlineVariables": {},
              "isList": true,
              "isListItemNonNull": false,
              "isNonNull": true,
              "kind": "composite",
              "name": "products",
              "type": "Product",
            },
          ],
          "inlineVariables": {
            "id": "samsung-store",
          },
          "isList": false,
          "isListItemNonNull": false,
          "isNonNull": false,
          "kind": "composite",
          "name": "storefront",
          "type": "Storefront",
        },
      ],
      "name": "NotBasicWithInlineVariables",
      "resolvers": [
        {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "composite",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "typeOrField": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "typeOrField": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "storefront",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "storefront",
    "storefront.id",
    "storefront.name",
    "storefront.products",
    "storefront.products.upc",
    "storefront.products.name",
    "storefront.products.manufacturer",
    "storefront.products.manufacturer.products",
    "storefront.products.manufacturer.products.upc",
    "storefront.products.manufacturer.products.name",
    "storefront.products.manufacturer.name",
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "apple-store",
      "name": "Apple Store",
      "products": [
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "Apple iPhone",
          "upc": "iphone",
        },
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "iPad",
          "upc": "ipad",
        },
      ],
    },
  },
  "explain": [
    {
      "data": {
        "storefront": {
          "id": "apple-store",
          "name": "Apple Store",
          "products": [
            {
              "upc": "iphone",
            },
            {
              "upc": "ipad",
            },
          ],
        },
      },
      "includes": [
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "apple",
                "products": [
                  {
                    "name": "Apple iPhone",
                    "upc": "iphone",
                  },
                  {
                    "name": "iPad",
                    "upc": "ipad",
                  },
                ],
              },
              "name": "Apple iPhone",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "Apple",
                },
              },
              "includes": [],
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathInData": [
                "storefront",
                "products",
                0,
                "manufacturer",
              ],
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "Manufacturer",
              "variables": {
                "Manufacturer_id": "apple",
              },
            },
          ],
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathInData": [
            "storefront",
            "products",
            0,
          ],
          "pathToExportData": [
            "product",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": "iphone",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "apple",
                "products": [
                  {
                    "name": "Apple iPhone",
                    "upc": "iphone",
                  },
                  {
                    "name": "iPad",
                    "upc": "ipad",
                  },
                ],
              },
              "name": "iPad",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "Apple",
                },
              },
              "includes": [],
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathInData": [
                "storefront",
                "products",
                1,
                "manufacturer",
              ],
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "Manufacturer",
              "variables": {
                "Manufacturer_id": "apple",
              },
            },
          ],
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathInData": [
            "storefront",
            "products",
            1,
          ],
          "pathToExportData": [
            "product",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": "ipad",
          },
        },
      ],
      "inlineVariables": {},
      "kind": "composite",
      "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
      "pathInData": [
        "storefront",
      ],
      "pathToExportData": [
        "storefront",
      ],
      "private": [],
      "public": [
        "id",
        "name",
        "products.upc",
      ],
      "source": "storefronts",
      "type": "Storefront",
      "typeOrField": "storefront",
      "variables": {
        "id": "apple-store",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "fields": [
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "id",
              "type": "ID",
            },
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "name",
              "type": "String",
            },
            {
              "fields": [
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "upc",
                  "type": "ID",
                },
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "name",
                  "type": "String",
                },
                {
                  "fields": [
                    {
                      "fields": [
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "upc",
                          "type": "ID",
                        },
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "name",
                          "type": "String",
                        },
                      ],
                      "inlineVariables": {},
                      "isList": true,
                      "isListItemNonNull": false,
                      "isNonNull": true,
                      "kind": "composite",
                      "name": "products",
                      "type": "Product",
                    },
                    {
                      "inlineVariables": {},
                      "isNonNull": true,
                      "kind": "scalar",
                      "name": "name",
                      "type": "String",
                    },
                  ],
                  "inlineVariables": {},
                  "isList": false,
                  "isListItemNonNull": false,
                  "isNonNull": false,
                  "kind": "composite",
                  "name": "manufacturer",
                  "type": "Manufacturer",
                },
              ],
              "inlineVariables": {},
              "isList": true,
              "isListItemNonNull": false,
              "isNonNull": true,
              "kind": "composite",
              "name": "products",
              "type": "Product",
            },
          ],
          "inlineVariables": {},
          "isList": false,
          "isListItemNonNull": false,
          "isNonNull": false,
          "kind": "composite",
          "name": "storefront",
          "type": "Storefront",
        },
      ],
      "name": "NotBasicWithOperationVariables",
      "resolvers": [
        {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "composite",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "typeOrField": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "typeOrField": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "storefront",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "storefront",
    "storefront.id",
    "storefront.name",
    "storefront.products",
    "storefront.products.upc",
    "storefront.products.name",
    "storefront.products.manufacturer",
    "storefront.products.manufacturer.products",
    "storefront.products.manufacturer.products.upc",
    "storefront.products.manufacturer.products.name",
    "storefront.products.manufacturer.name",
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should execute 1`] = `
{
  "data": {
    "manufacturerName": "Samsung",
  },
  "explain": [
    {
      "data": {
        "manufacturerName": "Samsung",
      },
      "inlineVariables": {
        "id": "samsung",
      },
      "kind": "scalar",
      "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
      "pathInData": [
        "manufacturerName",
      ],
      "pathToExportData": [
        "manufacturerName",
      ],
      "source": "manufacturers",
      "type": "String",
      "typeOrField": "manufacturerName",
      "variables": {
        "id": "samsung",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "inlineVariables": {
            "id": "samsung",
          },
          "isNonNull": false,
          "kind": "scalar",
          "name": "manufacturerName",
          "type": "String",
        },
      ],
      "name": "ScalarOperationField",
      "resolvers": [
        {
          "inlineVariables": {
            "id": "samsung",
          },
          "kind": "scalar",
          "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
          "pathToExportData": [
            "manufacturerName",
          ],
          "source": "manufacturers",
          "type": "String",
          "typeOrField": "manufacturerName",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "manufacturerName",
  ],
  "query": "query ScalarOperationField {
  manufacturerName(id: "samsung")
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should execute 1`] = `
{
  "data": {
    "productName": "iPad",
  },
  "explain": [
    {
      "data": {
        "product": {
          "name": "iPad",
        },
      },
      "inlineVariables": {
        "upc": "ipad",
      },
      "kind": "scalar",
      "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
      "pathInData": [
        "productName",
      ],
      "pathToExportData": [
        "product",
        "name",
      ],
      "source": "products",
      "type": "String",
      "typeOrField": "productName",
      "variables": {
        "upc": "ipad",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "inlineVariables": {
            "upc": "ipad",
          },
          "isNonNull": false,
          "kind": "scalar",
          "name": "productName",
          "type": "String",
        },
      ],
      "name": "ScalarOperationFieldNested",
      "resolvers": [
        {
          "inlineVariables": {
            "upc": "ipad",
          },
          "kind": "scalar",
          "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
          "pathToExportData": [
            "product",
            "name",
          ],
          "source": "products",
          "type": "String",
          "typeOrField": "productName",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "productName",
  ],
  "query": "query ScalarOperationFieldNested {
  productName(upc: "ipad")
}",
}
`;

exports[`fixture 'store' > should plan schema 1`] = `
{
  "compositeTypes": {
    "Manufacturer": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
              "typeOrField": "id",
            },
            "products": {
              "source": "products",
              "typeOrField": "id",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
              "typeOrField": "name",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "products",
            },
          },
        },
      },
      "name": "Manufacturer",
      "resolvers": {
        "manufacturers": {
          "kind": "composite",
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "manufacturers",
          "type": "Manufacturer",
          "typeOrField": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
        "products": {
          "kind": "composite",
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { _manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "products",
          "type": "Manufacturer",
          "typeOrField": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
      },
    },
    "Product": {
      "fields": {
        "manufacturer": {
          "name": "manufacturer",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "manufacturer",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "name",
            },
          },
        },
        "price": {
          "name": "price",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "price",
            },
          },
        },
        "upc": {
          "name": "upc",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "upc",
            },
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "upc",
            },
          },
        },
      },
      "name": "Product",
      "resolvers": {
        "products": {
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) { product(upc: $Product_upc) { ...__export } }",
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
        "storefronts": {
          "kind": "composite",
          "operation": "TODO",
          "source": "storefronts",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
      },
    },
    "Storefront": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "id",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "name",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "products",
            },
          },
        },
      },
      "name": "Storefront",
      "resolvers": {
        "storefronts": {
          "kind": "composite",
          "operation": "query StorefrontById($Storefront_id: ID!) { storefront(id: $Storefront_id) { ...__export } }",
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "Storefront",
          "variables": {
            "Storefront_id": {
              "name": "Storefront_id",
              "select": "id",
            },
          },
        },
      },
    },
  },
  "operations": {
    "query": {
      "fields": {
        "_manufacturer": {
          "name": "_manufacturer",
          "resolvers": {
            "products": {
              "kind": "composite",
              "operation": "query _manufacturer($id: ID!) { _manufacturer(id: $id) { ...__export } }",
              "source": "products",
              "type": "Manufacturer",
              "typeOrField": "_manufacturer",
              "variables": {},
            },
          },
        },
        "manufacturer": {
          "name": "manufacturer",
          "resolvers": {
            "manufacturers": {
              "kind": "composite",
              "operation": "query manufacturer($id: ID!) { manufacturer(id: $id) { ...__export } }",
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "manufacturer",
              "variables": {},
            },
          },
        },
        "manufacturerName": {
          "name": "manufacturerName",
          "resolvers": {
            "manufacturers": {
              "kind": "scalar",
              "operation": "query manufacturerName($id: ID!) { manufacturerName(id: $id) }",
              "source": "manufacturers",
              "type": "String",
              "typeOrField": "manufacturerName",
              "variables": {},
            },
          },
        },
        "product": {
          "name": "product",
          "resolvers": {
            "products": {
              "kind": "composite",
              "operation": "query product($upc: ID!) { product(upc: $upc) { ...__export } }",
              "source": "products",
              "type": "Product",
              "typeOrField": "product",
              "variables": {},
            },
          },
        },
        "productName": {
          "name": "productName",
          "resolvers": {
            "products": {
              "kind": "scalar",
              "operation": "query productName($upc: ID!) { product(upc: $upc) { name } }",
              "source": "products",
              "type": "String",
              "typeOrField": "productName",
              "variables": {},
            },
          },
        },
        "storefront": {
          "name": "storefront",
          "resolvers": {
            "storefronts": {
              "kind": "composite",
              "operation": "query storefront($id: ID!) { storefront(id: $id) { ...__export } }",
              "source": "storefronts",
              "type": "Storefront",
              "typeOrField": "storefront",
              "variables": {},
            },
          },
        },
      },
      "name": "query",
    },
  },
}
`;

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  id
  name
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        ...__export
      }
    }
  }
}

fragment __export on Manufacturer {
  id
  name
  products {
    manufacturer {
      location
    }
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
